@@ -7,6 +7,8 @@ partconf (1.08) UNRELEASED; urgency=low
     - get_all_partitions()'s symlink handling in /dev/discs was incorrect in
       places, and broke when using udev. Replace it with use of
       canonicalize_file_name().
+    - Use getopt_long() for find-parts option parsing. Support -i as short
+      version of --ignore-fstype.
 
  -- Christian Perrier <bubulle@debian.org>  Sat, 19 Mar 2005 12:26:03 +0100
 
